RESOLVED FIXED66617
Only #include <signal.h> and require SA_RESTART when building with JSC_MULTIPLE_THREADS
https://bugs.webkit.org/show_bug.cgi?id=66617
Summary Only #include <signal.h> and require SA_RESTART when building with JSC_MULTIP...
Daniel Bates
Reported 2011-08-19 18:24:06 PDT
SA_RESTART is only applicable when building with JSC_MULTIPLE_THREADS enabled. On QNX we use Pthreads and don't enable JSC_MULTIPLE_THREADS. Currently, we require a platform to have SA_RESTART support even when JSC_MULTIPLE_THREADS is disabled. But SA_RESTART support is only applicable when JSC_MULTIPLE_THREADS is enabled. Hence, we should only require SA_RESTART support when JSC_MULTIPLE_THREADS is enabled.
Attachments
Patch (1.49 KB, patch)
2011-08-19 18:38 PDT, Daniel Bates
no flags
Daniel Bates
Comment 1 2011-08-19 18:38:51 PDT
WebKit Review Bot
Comment 2 2011-08-19 19:59:22 PDT
Comment on attachment 104607 [details] Patch Clearing flags on attachment: 104607 Committed r93467: <http://trac.webkit.org/changeset/93467>
WebKit Review Bot
Comment 3 2011-08-19 19:59:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.