Only #include <signal.h> and require SA_RESTART when building with JSC_MULTIPLE_THREADS https://bugs.webkit.org/show_bug.cgi?id=66617

Both <signal.h> and SA_RESTART usage are guarded behind ENABLE(JSC_MULTIPLE_THREADS).
But we cause a compile error if the platform doesn't support SA_RESTART regardless of
whether JSC_MULTIPLE_THREADS is enabled for the port. Instead, we shouldn't require
SA_RESTART support unless we are building with JSC_MULTIPLE_THREADS enabled.

Reviewed by Antonio Gomes.

* heap/MachineStackMarker.cpp:


Canonical link: https://commits.webkit.org/82456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93467 268f45cc-cd09-0410-ab3c-d52691b4dbfc